# logics

./: CMakeLists.txt  README.md  logics.c  logics.h  test_dec2bin.h  test_logics.cc
